# locate-sam2

./: .gitignore  LICENSE  PAPER.md  README.md  pyproject.toml  requirements.txt
benchmarks/: README.md  ablation_table.json  benchmark_subset_200.json  dino_threshold_sweep.json  refcoco_plus_table.json  refcoco_val_table.json  refcocog_table.json
configs/: default.yaml
experiments/: HALLUCINATION_NOTES.md  README.md  RESULTS.md
locate_sam2/: __init__.py  adapter.py  api.py  cli.py  config.py  dino.py  images.py  locate.py  oracle.py  pipeline.py  segment.py  types.py  visualize.py
research_paper/: EXPERIMENTS_MISSING.md  GAPS.md  Makefile  README.md  STATUS.md  UPDATE_GUIDE.md  authors.tex  main.tex  ood_protocol.tex  plots.tex  preamble.tex  qual_figures.tex  references.bib  results_figure.tex  tables.tex
scripts/: aggregate_ood_scores.py  analyze_box_iou_stratification.py  analyze_hybrid_disagreement.py  bootstrap_vm.sh  build_experiment_tables.py  build_paper_figures.py  build_readme_assets.py  build_readme_figures.py  demo_gradio.py  download_baseline.sh  download_data.sh  download_dino_swint.sh  download_models.sh  download_train2014.sh  export_fixed_paper_cases.py  export_paper_figures.py  export_qualitative.py  generate_figures.py  probe_hallucination.py  probe_hybrid_fallback.py  rerender_paper_overlays.py  restrip_paper_overlays.py  run_ablation.py  run_analysis_and_stop.sh  run_benchmark.py  run_demo.py  run_dino_threshold_sweep.py  run_eval.py  run_eval_and_stop.sh  run_full_eval_suite.sh  run_full_figure_export.sh  run_full_val.sh  run_ood_batch.py  (+8 more)
(+63 files in other folders)
